# object_tracking

./: CMakeLists.txt  README.md
.cache/clangd/index/: main.cpp.4CECF2E7BD4F67FE.idx
src/: import.py  main.cpp
